update libs